--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "react": "^19.0.0",
